--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dayjs": "^1.11.10",
+    "ioredis": "^5.4.1",
+    "mime": "^4.0.3",
+    "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.2"
+    "zod": "^3.23.4"
   },
   "devDependencies": {
     "eslint": "^8",
